# gpecs

./: .env  .gitignore  Cargo.toml
benches/gpecs_ecs_benchmark/: .env  .gitignore  Cargo.toml  build.rs
benches/gpecs_ecs_benchmark/benches/: ecs_benchmark.rs  gpecs.rs
benches/gpecs_ecs_benchmark/src/: cpu.rs  dump.rs  framebuffer.rs  gpu.rs  lib.rs  logs.rs  main.rs  save.rs  setup.rs  statistics.rs  utils.rs
benches/gpecs_ecs_benchmark/src/components/: data.rs  health.rs  mod.rs  player.rs  sprite.rs  velocity.rs
benches/gpecs_ecs_benchmark/src/systems/: damage.rs  data.rs  mod.rs  movement.rs  render.rs  sprite.rs
benches/gpecs_ecs_benchmark_core/: Cargo.toml  build.rs
benches/gpecs_ecs_benchmark_core/src/: cpu.rs  gpu.rs  lib.rs  setup.rs  statistics.rs
benches/gpecs_ecs_benchmark_shader/: Cargo.toml
benches/gpecs_ecs_benchmark_shader/src/: lib.rs
benches/gpecs_ecs_benchmark_types/: Cargo.toml
benches/gpecs_ecs_benchmark_types/src/: framebuffer.rs  lib.rs  utils.rs
benches/gpecs_ecs_benchmark_types/src/components/: damage.rs  data.rs  empty.rs  health.rs  mod.rs  player.rs  position.rs  sprite.rs  velocity.rs
benches/gpecs_ecs_benchmark_types/src/systems/: damage.rs  data.rs  health.rs  more_complex.rs  movement.rs  render.rs  sprite.rs
benches/gpecs_soa_bench/: Cargo.toml
benches/gpecs_soa_bench/benches/: soa_push.rs  soa_with_capacity.rs  soa_work.rs
benches/gpecs_soa_bench/benches/common/: names.rs  push.rs  with_capacity.rs  work.rs
benches/gpecs_soa_bench/src/: clear.rs  lib.rs  names.rs  push.rs  soa_vecs.rs  with_capacity.rs  work.rs
crates/gpecs/: Cargo.toml  build.rs
crates/gpecs/examples/: cpu.rs  gpu.rs
crates/gpecs/examples/common/: mod.rs
crates/gpecs/src/: archetype.rs  assert.rs  bundle.rs  component.rs  entity.rs  hash.rs  id.rs  lib.rs  prelude.rs
crates/gpecs/src/archetype/: collect.rs  erased.rs  error.rs  meta.rs  mod.rs  registry.rs  storage.rs  utils.rs
crates/gpecs/src/bundle/: erased.rs  error.rs  impls.rs  mod.rs  traits.rs
crates/gpecs/src/component/: erased.rs  error.rs  mod.rs  registry.rs  utils.rs
crates/gpecs/src/context/: components.rs  error.rs  mod.rs
crates/gpecs/src/entity/: mod.rs  registry.rs
crates/gpecs/src/executor/: mod.rs
crates/gpecs/src/world/: registry.rs
crates/gpecs/tests/: tests.rs
crates/gpecs/tests/archetype/: registry.rs  storage.rs
crates/gpecs_archetype/: Cargo.toml
crates/gpecs_archetype/src/: lib.rs
crates/gpecs_archetype/tests/: id.rs  tests.rs
crates/gpecs_component/: Cargo.toml
crates/gpecs_component/src/: lib.rs  traits.rs
crates/gpecs_component/tests/: id.rs  registry.rs
crates/gpecs_entity/: Cargo.toml
crates/gpecs_entity/src/: entity.rs  epoch.rs  lib.rs  sparse.rs
crates/gpecs_entity/tests/: entity.rs  registry.rs
crates/gpecs_erased/: Cargo.toml
crates/gpecs_erased/src/: error.rs  lib.rs
crates/gpecs_itertools/: Cargo.toml
crates/gpecs_itertools/src/: lib.rs  take.rs
crates/gpecs_num/: Cargo.toml
crates/gpecs_num/src/: lib.rs  u16.rs
crates/gpecs_shader_example/: Cargo.toml
crates/gpecs_shader_example/src/: lib.rs
crates/gpecs_shaders/: Cargo.toml
crates/gpecs_shaders/src/: convert.rs  descriptors.rs  layouts.rs  lib.rs  ptrs.rs  slice_item_ptr.rs
crates/gpecs_soa/: Cargo.toml
crates/gpecs_soa/benches/: soa.rs
crates/gpecs_soa/src/: buffer.rs  dyn.rs  erased.rs  field.rs  identity.rs  layout.rs  lib.rs  mem.rs  prelude.rs  ptr.rs  raw_vec.rs  set_len_on_drop.rs  slice.rs  soa.rs  traits.rs  vec.rs
crates/gpecs_soa/tests/: layout.rs  tests.rs  workload.rs
crates/gpecs_soa_core/: Cargo.toml
crates/gpecs_soa_core/src/: lib.rs  mem.rs  ptr.rs
crates/gpecs_soa_erased/: Cargo.toml
crates/gpecs_soa_erased/src/: align.rs  aligned_bytes.rs  assert.rs  byte.rs  bytes_to_items.rs  context.rs  dangling.rs  descriptors.rs  error.rs  fields.rs  fmt.rs  layouts.rs  lib.rs  mut_ptrs.rs  mut_refs.rs  mut_slice_ptrs.rs  mut_slices.rs  nonnull_ptrs.rs  offsets.rs  ptrs.rs  refs.rs  slice_ptrs.rs  slices.rs  soa_impl.rs  uninit.rs  value.rs
crates/gpecs_soa_erased/tests/: context.rs  tests.rs  value.rs  workload.rs
crates/gpecs_soa_pair/: Cargo.toml
crates/gpecs_soa_pair/src/: field_layouts.rs  lib.rs  mut_ptrs.rs  mut_refs.rs  mut_slice_ptrs.rs  mut_slices.rs  nonnull_ptrs.rs  ptrs.rs  refs.rs  slice_ptrs.rs  slices.rs  soa_impl.rs  value.rs
crates/gpecs_sparse/: Cargo.toml
crates/gpecs_sparse/src/: algo.rs  arena.rs  assert.rs  entry.rs  error.rs  item.rs  iter.rs  key.rs  lib.rs  pair.rs  prelude.rs  set.rs  view.rs
crates/gpecs_sparse/tests/: arena.rs  set.rs
crates/gpecs_spirv_analysis/: Cargo.toml
crates/gpecs_spirv_analysis/src/: asymptotic.rs  lib.rs  tmm.rs
crates/gpecs_types/: Cargo.toml
crates/gpecs_types/src/: archetype.rs  component.rs  entity.rs  lib.rs  world.rs
crates/gpecs_types/tests/: archetype.rs  component.rs  entity.rs  world.rs
crates/gpecs_world/: Cargo.toml
crates/gpecs_world/src/: id.rs  lib.rs  registry.rs
crates/gpecs_world/tests/: id.rs  registry.rs
examples/gpecs_nbody/: Cargo.toml  build.rs
examples/gpecs_nbody/src/: app.rs  graphics.rs  main.rs  state.rs  ui.rs
examples/gpecs_nbody_shader/: Cargo.toml
examples/gpecs_nbody_shader/src/: lib.rs
examples/gpecs_nbody_types/: Cargo.toml
examples/gpecs_nbody_types/src/: components.rs  lib.rs  render.rs  systems.rs
examples/gpecs_simple/: Cargo.toml  build.rs
examples/gpecs_simple/src/: components.rs  cpu.rs  dump.rs  gpu.rs  logs.rs  main.rs  setup.rs  statistics.rs
examples/gpecs_simple_core/: Cargo.toml  build.rs
examples/gpecs_simple_core/src/: cpu.rs  gpu.rs  setup.rs
examples/gpecs_simple_shader/: Cargo.toml
examples/gpecs_simple_shader/src/: lib.rs
shaders/: Cargo.toml
shaders/crates/gpecs_spirv_example/: Cargo.toml
shaders/crates/gpecs_spirv_example_builder/: Cargo.toml  build.rs
shaders/gpecs_spirv_example/: Cargo.toml
shaders/gpecs_spirv_example/src/: lib.rs
shaders/gpecs_spirv_example_builder/: build.rs
shaders/gpecs_spirv_example_builder/src/: main.rs
(+757 files in other folders)
