[workspace]
resolver = "3"
members = [
    # main crates
    "crates/gpecs",
    "crates/gpecs_world",
    "crates/gpecs_entity",
    "crates/gpecs_component",
    "crates/gpecs_archetype",
    "crates/gpecs_shaders",
    # utility crates
    "crates/gpecs_ptr",
    "crates/gpecs_num",
    "crates/gpecs_layout",
    "crates/gpecs_erased",
    "crates/gpecs_soa",
    "crates/gpecs_soa_erased",
    "crates/gpecs_sparse",
    "crates/gpecs_spirv_analysis",
    "crates/gpecs_task_graph",
    # standalone examples
    "examples/gpecs_simple",
    "examples/gpecs_simple_types",
    "examples/gpecs_simple_shader",
    # standalone benchmarks
    "benches/gpecs_soa_bench",
    "benches/gpecs_ecs_benchmark",
    "benches/gpecs_ecs_benchmark_types",
    "benches/gpecs_ecs_benchmark_shader",
]

[workspace.package]
version = "0.0.0"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"
# stable counterpart of nightly-2025-11-13, which is required for Rust-GPU project
rust-version = "1.92.0"

[workspace.dependencies]
# main crates
gpecs = { path = "crates/gpecs" }
gpecs_world = { path = "crates/gpecs_world" }
gpecs_entity = { path = "crates/gpecs_entity" }
gpecs_component = { path = "crates/gpecs_component" }
gpecs_archetype = { path = "crates/gpecs_archetype" }
# utility crates
gpecs_ptr = { path = "crates/gpecs_ptr", default-features = false }
gpecs_num = { path = "crates/gpecs_num", default-features = false }
gpecs_layout = { path = "crates/gpecs_layout", default-features = false }
gpecs_erased = { path = "crates/gpecs_erased", default-features = false }
gpecs_soa = { path = "crates/gpecs_soa", default-features = false }
gpecs_soa_erased = { path = "crates/gpecs_soa_erased", default-features = false }
gpecs_sparse = { path = "crates/gpecs_sparse", default-features = false }
# standalone examples
gpecs_simple_types = { path = "examples/gpecs_simple_types" }
# standalone benchmarks
gpecs_ecs_benchmark_types = { path = "benches/gpecs_ecs_benchmark_types" }
# actual dependencies
cargo-gpu-install = { git = "https://github.com/Rust-GPU/cargo-gpu", rev = "7f1995823a82ee6e6b7a63b57313c4a829856e3d" }
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "30896871ba00e668029ccb724f1438202b284708" }
indexmap = { version = "2.13", default-features = false }
petgraph = { version = "0.8", default-features = false }
rustc-hash = { version = "2.1", default-features = false }
arrayvec = { version = "0.7", default-features = false }
itertools = { version = "0.14", default-features = false }
num-traits = { version = "0.2", default-features = false }
rspirv = { version = "0.12", default-features = false }
criterion = { version = "0.8", features = ["html_reports"] }
pollster = { version = "0.4", default-features = false }
bytemuck = { version = "1.25", default-features = false }
const_format = { version = "0.2", default-features = false }
log = { version = "0.4", default-features = false }
glam = { version = "0.32", default-features = false }
renderdoc = { version = "0.12", default-features = false }
env_logger = { version = "0.11" }
wgpu = { version = "29" }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_arch, values("spirv"))',
    'cfg(coverage, coverage_nightly)',
] }
# TODO make them "warn" after implementation & tests
missing_docs = "allow"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
doc_markdown = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
expl_impl_clone_on_copy = { level = "allow", priority = 1 }
# TODO make them "warn" after implementation & tests
missing_safety_doc = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }

[profile.bench]
codegen-units = 1
lto = "fat"

[profile.flamegraph]
inherits = "bench"
debug = true
