[workspace]
resolver = "3"
members = [
    # main crates
    "crates/gpecs",
    "crates/gpecs_world",
    "crates/gpecs_entity",
    "crates/gpecs_component",
    "crates/gpecs_archetype",
    "crates/gpecs_shaders",
    # utility crates
    "crates/gpecs_ptr",
    "crates/gpecs_num",
    "crates/gpecs_layout",
    "crates/gpecs_erased",
    "crates/gpecs_itertools",
    "crates/gpecs_identity",
    "crates/gpecs_soa",
    "crates/gpecs_soa_pair",
    "crates/gpecs_soa_erased",
    "crates/gpecs_sparse",
    # standalone examples
    "examples/gpecs_simple",
    "examples/gpecs_simple_core",
    "examples/gpecs_simple_types",
    "examples/gpecs_simple_shader",
    "examples/gpecs_nbody",
    "examples/gpecs_nbody_types",
    "examples/gpecs_nbody_shader",
    # standalone benchmarks
    "benches/gpecs_soa_bench",
    "benches/gpecs_ecs_benchmark",
    "benches/gpecs_ecs_benchmark_core",
    "benches/gpecs_ecs_benchmark_types",
    "benches/gpecs_ecs_benchmark_shader",
]

[workspace.package]
version = "0.0.0"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"
# stable counterpart of nightly-2026-04-11, which is required for Rust-GPU project
rust-version = "1.95.0"

[workspace.dependencies]
# main crates
gpecs = { path = "crates/gpecs", default-features = false }
gpecs_world = { path = "crates/gpecs_world", default-features = false }
gpecs_entity = { path = "crates/gpecs_entity", default-features = false }
gpecs_component = { path = "crates/gpecs_component", default-features = false }
gpecs_archetype = { path = "crates/gpecs_archetype", default-features = false }
# utility crates
gpecs_ptr = { path = "crates/gpecs_ptr", default-features = false }
gpecs_num = { path = "crates/gpecs_num", default-features = false }
gpecs_layout = { path = "crates/gpecs_layout", default-features = false }
gpecs_erased = { path = "crates/gpecs_erased", default-features = false }
gpecs_itertools = { path = "crates/gpecs_itertools", default-features = false }
gpecs_identity = { path = "crates/gpecs_identity", default-features = false }
gpecs_soa = { path = "crates/gpecs_soa", default-features = false }
gpecs_soa_pair = { path = "crates/gpecs_soa_pair", default-features = false }
gpecs_soa_erased = { path = "crates/gpecs_soa_erased", default-features = false }
gpecs_sparse = { path = "crates/gpecs_sparse", default-features = false }
# standalone examples
gpecs_simple_core = { path = "examples/gpecs_simple_core" }
gpecs_simple_types = { path = "examples/gpecs_simple_types" }
gpecs_nbody_types = { path = "examples/gpecs_nbody_types" }
# standalone benchmarks
gpecs_ecs_benchmark_core = { path = "benches/gpecs_ecs_benchmark_core" }
gpecs_ecs_benchmark_types = { path = "benches/gpecs_ecs_benchmark_types" }
# actual dependencies
cargo-gpu-install = { version = "0.10.0-alpha.1", default-features = false }
spirv-std = { version = "0.10.0-alpha.1", default-features = false }
indexmap = { version = "2.14", default-features = false }
petgraph = { version = "0.8", default-features = false }
rustc-hash = { version = "2.1", default-features = false }
hashbrown = { version = "0.17", default-features = false }
arrayvec = { version = "0.7", default-features = false }
itertools = { version = "0.14", default-features = false }
num-traits = { version = "0.2", default-features = false }
polonius-the-crab = { version = "0.5", default-features = false }
bytemuck = { version = "1.25", default-features = false }
glam = { version = "0.32", default-features = false, features = ["nostd-libm"] }
wgpu = { version = "29" }
rayon = { version = "1.12" }
const_format = { version = "0.2", default-features = false }
pollster = { version = "0.4", default-features = false }
criterion = { version = "0.8", features = ["html_reports"] }
log = { version = "0.4", default-features = false }
env_logger = { version = "0.11" }
csv = { version = "1.4" }
dotenvy = { version = "0.15" }
crossterm = { version = "0.29" }
dhat = { version = "0.3" }
winit = { version = "0.30" }
egui = { version = "0.34" }
egui-winit = { version = "0.34" }
egui-wgpu = { version = "0.34" }
ouroboros = { version = "0.18" }

[patch.crates-io]
cargo-gpu-install = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "36e3348cdc2f824afec64b3b5af5d369d98a4c0d" }
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "36e3348cdc2f824afec64b3b5af5d369d98a4c0d" }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_arch, values("spirv"))',
    'cfg(coverage, coverage_nightly)',
] }
# TODO make them "warn" after implementation & tests
missing_docs = "allow"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
doc_markdown = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
expl_impl_clone_on_copy = { level = "allow", priority = 1 }
# TODO make them "warn" after implementation & tests
missing_safety_doc = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }

[profile.bench]
codegen-units = 1
lto = "fat"

[profile.flamegraph]
inherits = "bench"
debug = true

[profile.gpu_capture]
inherits = "bench"
debug-assertions = true
