[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies]
gpecs_spirv_analysis = { path = "../crates/gpecs_spirv_analysis" }
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "6e2c84d4" }
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "6e2c84d4", default-features = false }
rspirv = { version = "0.12" }
unroll = { version = "0.1.5" }
static_assertions = { version = "1.1.0" }

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_arch, values("spirv"))']


# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3
