[package]
name = "gpecs_ecs_benchmark"
description = "`ecs_benchmark` implementation for (probably) ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dev-dependencies]
gpecs = { workspace = true }
gpecs_ecs_benchmark_types = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
log = { workspace = true }
env_logger = { workspace = true }
wgpu = { workspace = true, features = ["spirv"] }
pollster = { workspace = true }
renderdoc = { workspace = true }
itertools = { workspace = true }

[build-dependencies]
cargo-gpu = { workspace = true }
const_format = { workspace = true }

[[bench]]
name = "ecs_benchmark"
harness = false
