[package]
name = "gpecs_ecs_benchmark"
description = "`ecs_benchmark` implementation for ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
gpecs = { workspace = true }
gpecs_ecs_benchmark_core = { workspace = true }
gpecs_ecs_benchmark_types = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
csv = { workspace = true }
dotenvy = { workspace = true }
crossterm = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "ecs_benchmark"
harness = false
