[package]
name = "gpecs_ecs_benchmark_shader"
description = "SPIR-V shader for `ecs_benchmark` of (probably) ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["dylib", "lib"]

[dependencies]
gpecs_types = { workspace = true }
gpecs_ecs_benchmark = { workspace = true }
spirv-std = { workspace = true }
unroll = { workspace = true }
static_assertions = { workspace = true }

[features]
nightly = []

[lints]
workspace = true

[package.metadata.rust-gpu.install]
spirv-builder-source = "https://github.com/Rust-GPU/rust-gpu"
spirv-builder-version = "6d7c1cd"
rebuild-codegen = false
auto-install-rust-toolchain = false
force-overwrite-lockfiles-v4-to-v3 = false

[package.metadata.rust-gpu.build]
default-features = false
features = ["nightly"]
target = "spirv-unknown-spv1.5"
spirv-metadata = "Full"
