[package]
name = "gpecs_ecs_benchmark_shader"
description = "SPIR-V shader for `ecs_benchmark` of (probably) ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["dylib", "lib"]

[dependencies]
gpecs_types = { workspace = true }
gpecs_ecs_benchmark_types = { workspace = true }
spirv-std = { workspace = true }

[features]
nightly = []

[lints]
workspace = true
