[package]
name = "gpecs_soa_bench"
description = "Benchmarks of SoA implementation for (probably) ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gpecs_soa = { workspace = true, features = ["alloc"] }
gpecs_soa_erased = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
erased = ["dep:gpecs_soa_erased"]

[[bench]]
name = "soa"
harness = false
