[package]
name = "gpecs"
description = "ECS on GPU, probably"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
gpecs_sparse = { workspace = true, features = ["alloc"] }
gpecs_soa_erased = { workspace = true, features = ["alloc"] }
gpecs_world = { workspace = true }
gpecs_entity = { workspace = true, features = ["alloc"] }
gpecs_component = { workspace = true }
gpecs_archetype = { workspace = true }
bytemuck = { workspace = true, features = ["derive", "must_cast"] }
indexmap = { workspace = true }
rustc-hash = { workspace = true }
petgraph = { workspace = true }
itertools = { workspace = true, features = ["use_std"] }
wgpu = { workspace = true }

[build-dependencies]
cargo-gpu-install = { workspace = true }
const_format = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }
num-traits = { workspace = true }

[lints]
workspace = true
