[package]
name = "gpecs"
description = "ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
gpecs_sparse = { workspace = true, features = ["alloc"] }
gpecs_soa_erased = { workspace = true, features = ["alloc"] }
gpecs_itertools = { workspace = true }
gpecs_world = { workspace = true }
gpecs_entity = { workspace = true, features = ["alloc"] }
gpecs_component = { workspace = true, features = ["alloc"] }
gpecs_archetype = { workspace = true, features = ["alloc"] }
bytemuck = { workspace = true, features = ["must_cast"] }
num-traits = { workspace = true }
indexmap = { workspace = true }
rustc-hash = { workspace = true }
petgraph = { workspace = true }
itertools = { workspace = true, features = ["use_std"] }
wgpu = { workspace = true, features = ["spirv"] }
rayon = { workspace = true, optional = true }

[build-dependencies]
cargo_metadata = { workspace = true }
cargo-gpu-install = { workspace = true }

[dev-dependencies]
wgpu = { workspace = true, features = ["vulkan", "dx12", "metal"] }
pollster = { workspace = true }

[features]
rayon = [
    "dep:rayon",
    "gpecs_sparse/rayon",
    "gpecs_entity/rayon",
    "gpecs_archetype/rayon",
]

[lints]
workspace = true
