[package]
name = "gpecs_archetype"
description = "Archetype definitions for (probably) ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gpecs_component = { workspace = true }
gpecs_soa_erased = { workspace = true }

[features]
default = ["alloc"]
alloc = ["gpecs_component/alloc", "gpecs_soa_erased/alloc"]

[lints]
workspace = true
