[package]
name = "gpecs_archetype"
description = "Archetype definitions for (probably) ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gpecs_entity = { workspace = true }
gpecs_component = { workspace = true }
gpecs_soa_erased = { workspace = true }
gpecs_sparse = { workspace = true }
itertools = { workspace = true }
bytemuck = { workspace = true, features = ["derive", "must_cast"] }
rayon = { workspace = true, optional = true }

[dev-dependencies]
gpecs_world = { workspace = true }
gpecs_entity = { workspace = true }

[features]
default = ["alloc"]
alloc = [
    "gpecs_entity/alloc",
    "gpecs_component/alloc",
    "gpecs_soa_erased/alloc",
    "gpecs_sparse/alloc",
]
rayon = ["dep:rayon", "gpecs_entity/rayon", "gpecs_sparse/rayon"]

[lints]
workspace = true
