[package]
name = "gpecs_component"
description = "Component definitions for (probably) ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gpecs_erased = { workspace = true }
polonius-the-crab = { workspace = true }
bytemuck = { workspace = true }
hashbrown = { workspace = true, features = ["default-hasher"], optional = true }

[features]
default = ["alloc"]
alloc = ["dep:hashbrown"]

[lints]
workspace = true
