[package]
name = "gpecs_entity"
description = "Entity definitions for (probably) ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gpecs_num = { workspace = true }
gpecs_world = { workspace = true }
gpecs_sparse = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }

[features]
default = ["alloc"]
alloc = ["gpecs_sparse/alloc"]

[lints]
workspace = true
