[package]
name = "gpecs_erased"
description = "Erased data manipulation for ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gpecs_ptr = { workspace = true }
gpecs_layout = { workspace = true }

[features]
default = ["alloc"]
alloc = []

[lints]
workspace = true
