[package]
name = "gpecs_itertools"
description = "Additional iterator functionality for (probably) ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
itertools = { workspace = true }

[lints]
workspace = true
