[package]
name = "gpecs_num"
description = "Numeric utilities for ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bytemuck = { workspace = true, features = ["derive"] }

[lints]
workspace = true
