[package]
name = "gpecs_shaders"
description = "SPIR-V shaders for (probably) ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gpecs_types = { workspace = true }
gpecs_soa_erased = { workspace = true }
spirv-std = { workspace = true }

[features]
nightly = []

[lints]
workspace = true
