[package]
name = "gpecs_soa"
description = "Structure of Arrays (SoA) implementation for (probably) ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dev-dependencies]
criterion = { workspace = true }
gpecs_soa_erased = { workspace = true }

[[bench]]
name = "soa"
harness = false
