[package]
name = "gpecs_soa"
description = "Structure of Arrays (SoA) implementation for (probably) ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dev-dependencies]
itertools = { workspace = true }
rustc-hash = { workspace = true }

[features]
default = ["alloc"]
alloc = []

[lints]
workspace = true
