[package]
name = "gpecs_soa"
description = "Structure of Arrays (SoA) implementation for ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gpecs_layout = { workspace = true }
gpecs_identity = { workspace = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
itertools = { workspace = true }
rustc-hash = { workspace = true }

[features]
default = ["alloc"]
alloc = []

[lints]
workspace = true
