[package]
name = "gpecs_soa_erased"
description = "Erased SoA implementation for (probably) ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gpecs_ptr = { workspace = true }
gpecs_soa = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
arrayvec = { workspace = true }

[features]
default = ["alloc"]
alloc = ["gpecs_soa/alloc"]

[lints]
workspace = true
