[package]
name = "gpecs_soa_pair"
description = "Key-value SoA pair for ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gpecs_ptr = { workspace = true }
gpecs_soa = { workspace = true }

[lints]
workspace = true
