[package]
name = "gpecs_sparse"
description = "Sparse vector, map & set implementations for (probably) ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
gpecs_soa = { workspace = true }

[features]
default = ["cache-ptrs"]
cache-ptrs = ["gpecs_soa/cache-ptrs"]
