[package]
name = "gpecs_sparse"
description = "Sparse vector, map & set implementations for (probably) ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gpecs_soa = { workspace = true }

[features]
default = ["alloc"]
alloc = ["gpecs_soa/alloc"]
