[package]
name = "gpecs_sparse"
description = "Sparse vector, map & set implementations for ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gpecs_soa = { workspace = true }
gpecs_soa_pair = { workspace = true }
gpecs_itertools = { workspace = true }
rayon = { workspace = true, optional = true }

[features]
default = ["alloc"]
alloc = ["gpecs_soa/alloc"]
rayon = ["dep:rayon", "gpecs_soa/rayon"]

[lints]
workspace = true
