[package]
name = "gpecs_world"
description = "World definitions for ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gpecs_num = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }

[lints]
workspace = true
