[package]
name = "gpecs_nbody"
description = "N-body simulation example of ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
dotenvy = { workspace = true }
pollster = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
egui = { workspace = true }
egui-winit = { workspace = true }
egui-wgpu = { workspace = true }

[lints]
workspace = true
