[package]
name = "gpecs_nbody"
description = "N-body simulation example of ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
gpecs = { workspace = true }
gpecs_nbody_types = { workspace = true }
bytemuck = { workspace = true, features = ["must_cast"] }
glam = { workspace = true, features = ["f64", "u32", "rand"] }
num-traits = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
dotenvy = { workspace = true }
pollster = { workspace = true }
wgpu = { workspace = true, features = ["vulkan", "dx12", "metal", "spirv"] }
winit = { workspace = true }
egui = { workspace = true }
egui-winit = { workspace = true }
egui-wgpu = { workspace = true }
rand = { workspace = true }

[build-dependencies]
cargo-gpu-install = { workspace = true }
const_format = { workspace = true }

[lints]
workspace = true
